--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,112 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap');
+
+/* default properties */
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: black;
+}
+
+/* logo */
+
+#logo {
+    width: 150px;
+    margin-left: 30px;
+    float: left;
+}
+
+/* menu */
+
+#nav-menu {
+    font-size: 100%;
+    float: right;
+    display: inline;
+    margin-top: 15px;
+}
+
+#nav-menu li {
+    list-style-type: none;
+    display: inline-block;
+    margin-right: 30px;
+}
+
+#nav-menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#nav-menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+/* hero section */
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../images/hero_image.jpg') center center;
+
+    /* animates zoom effect on loading page */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+/* creates the level of zoom for hero image */
+@keyframes hero-zoom {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
+}
+
+/* footer */
+
+footer {
+    height: 100px;
+    background-color: #f0f0f0;
+}
+
+.footer-left {
+    float: left;
+}
+
+.footer-center {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.footer-right {
+    float: right;
+}
+
+.footer-social-networks {
+    text-align: left;
+}
+
+.footer-social-networks>li {
+    display: inline-block;
+    letter-spacing: 80px;
+}
+
+.footer-social-networks i {
+    font-size: 180%;
+    color: black;
+}
