--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,30 @@ body {
     }
 }
 
+.hero-heading {
+    display: block;
+    text-align: center;
+    color: black;
+    background-color: #f0f0f0;
+    border-radius: 5%;
+}
+
+/* projects */
+
+.projects {
+    border-style: dashed;
+    margin: 10px 250px 10px 250px;
+    text-align: left;
+    padding: 10 10 10 10;
+}
+
+.thumbnail {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+}
+
 /* footer */
 
 footer {
