--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap');
 
 /* default properties */
-
-* {
-    margin: 0;
-    padding: 0;
-    border: none;
-}
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -28,7 +23,7 @@ body {
     font-size: 100%;
     float: right;
     display: inline;
-    margin-top: 15px;
+    margin-top: 20px;
 }
 
 #nav-menu li {
@@ -49,16 +44,16 @@ body {
 /* hero section */
 
 #hero-outer {
-    height: 600px;
     width: 100%;
     overflow: hidden;
     position: relative;
 }
 
 #hero-image {
-    height: 600px;
+    height: 400px;
     width: 100%;
     background: url('../images/hero_image.jpg') center center;
+    margin-bottom: 30px;
 
     /* animates zoom effect on loading page */
     animation-name: hero-zoom;
@@ -77,12 +72,18 @@ body {
     }
 }
 
-.hero-heading {
-    display: block;
+#hero-text {
+    font-family: 'Calligraffitti', cursive;
+    width: 100%;
+    height: 150px;
     text-align: center;
     color: black;
-    background-color: #f0f0f0;
-    border-radius: 5%;
+    margin-top: 50px;
+}
+
+#hero-text>h3 {
+    text-align: center;
+    position: relative;
 }
 
 /* projects */
@@ -105,32 +106,33 @@ body {
 
 footer {
     height: 100px;
+    width: 100%;
     background-color: #f0f0f0;
 }
 
-.footer-left {
+#footer-left {
+    width: 33%;
     float: left;
+    margin-top: 15px;
 }
 
-.footer-center {
-    margin: 0 auto;
-    text-align: center;
-}
-
-.footer-right {
-    float: right;
-}
-
-.footer-social-networks {
-    text-align: left;
-}
-
-.footer-social-networks>li {
+#footer-center {
+    width: 33%;
     display: inline-block;
-    letter-spacing: 80px;
+    text-align: center;
+    margin-top: 15px;
 }
 
-.footer-social-networks i {
+#footer-right {
+    width: 32%;
+    display: inline-block;
+    text-align: right;
+    margin-top: 15px;
+}
+
+#footer-right>span {
     font-size: 180%;
+    display: inline;
+    letter-spacing: 50px;
     color: black;
 }
