--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,11 +87,10 @@ body {
 
 #projects-carrousel {
     width: 100%;
-    position: relative;
+    height: auto;
 }
 
 .projects {
-    border-style: dashed;
     width: 240px;
     text-align: left;
     display: inline-block;
@@ -112,10 +111,45 @@ body {
     margin: 0 15% 0 15%;
 }
 
+/* tools */
+
+#tools-level {
+    width: 100%;
+    height: auto;
+}
+
+#tools-level>h4 {
+    text-align: center;
+}
+
+/* REF: align content within a div https: //stackoverflow.com/questions/7926540/css-center-content-inside-div */
+
+.tools-icons {
+    width: 100px;
+    height: 40px;
+    display: inline-block;
+    text-align: center;
+    margin-right: 40px;
+}
+
+.tools-icons>a {
+    display: inline-block;
+}
+
+.tools-icons>a>img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.tools-icons>img {
+    width: 100px;
+    height: 40px;
+}
+
 /* footer */
 
 footer {
-    height: 100px;
+    height: auto;
     width: 100%;
     background-color: #f0f0f0;
 }
