--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,69 @@
 /* default properties */
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/* adjust background image https: //www.w3schools.com/html/html_images_background.asp*/
+
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     color: black;
+    /* background-image: url('/assets/images/body_background_op.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover; */
+}
+
+/* https://stackoverflow.com/questions/29147806/how-can-i-set-the-image-opacity-for-body-background */
+
+body::after {
+    content: "";
+    background-image: url('/assets/images/body_background_op.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+/* REF: to keep header sticky on the top https: //www.shecodes.io/athena/27153-how-to-make-a-header-stay-in-place-when-scrolling-with-css */
+
+header {
+    position: fixed;
+    height: 110px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #faf8f8;
+    padding: 10px;
 }
 
 /* logo */
 
 #logo {
     width: 150px;
+    height: 120px;
     margin-left: 30px;
+    margin-top: -5px;
     float: left;
 }
 
 /* menu */
 
 #nav-menu {
-    font-size: 100%;
+    font-size: 20px;
     float: right;
     display: inline;
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-right: 30px;
 }
 
 #nav-menu li {
@@ -31,7 +74,10 @@ body {
 
 #nav-menu a {
     text-decoration: none;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px #888686;
     color: inherit;
+    position: relative;
 }
 
 #nav-menu a:hover {
@@ -42,31 +88,9 @@ body {
 
 #hero-outer {
     width: 100%;
-    overflow: hidden;
-    position: relative;
-}
-
-#hero-image {
-    height: 400px;
-    width: 100%;
-    background: url('../images/hero_image.jpg') center center;
-    margin-bottom: 30px;
-
-    /* animates zoom effect on loading page */
-    animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
-}
-
-/* creates the level of zoom for hero image */
-@keyframes hero-zoom {
-    from {
-        transform: scale(1);
-    }
-
-    to {
-        transform: scale(1.1);
-    }
+    height: auto;
+    /* overflow: hidden; not needed if I'm not using the hero image */
+    margin-top: 240px;
 }
 
 #hero-text {
@@ -75,12 +99,12 @@ body {
     height: 150px;
     text-align: center;
     color: black;
+    text-shadow: 1px 1px 1px #888686;
     margin-top: 50px;
 }
 
 #hero-text>h3 {
     text-align: center;
-    position: relative;
 }
 
 /* gallety - projects */
@@ -145,7 +169,7 @@ body {
 footer {
     height: auto;
     width: 100%;
-    background-color: #f0f0f0;
+    background-color: #faf8f8;
 }
 
 #footer-left {
