--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,8 +50,8 @@ header {
 /* logo */
 
 #logo {
-    width: 150px;
-    height: 120px;
+    width: 115px;
+    height: 80px;
     margin-left: 30px;
     margin-top: -7px;
     float: left;
@@ -63,7 +63,7 @@ header {
     font-size: 20px;
     float: right;
     display: inline;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-right: 30px;
 }
 
@@ -91,31 +91,28 @@ header {
     text-align: center;
 }
 
-/* REF: source W3Schools https://www.w3schools.com/howto/howto_css_hero_image.asp */
-/* The hero image */
-.hero-image {
-    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");
-
-    /* Set a specific height */
+#hero-image>img {
     height: 50%;
+    width: 100%;
+    display: inline-block;
 
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
 }
 
 #hero-text {
     font-family: 'Calligraffitti', cursive;
-    width: 1960px;
+    width: 100%;
     height: 150px;
     text-align: center;
-    color: #585757;
+    color: #d8d5d5;
     text-shadow: 1px 1px 5px #888686;
-    margin-top: 50px;
+    margin-top: -5px;
     font-size: x-large;
+    background: linear-gradient(rgb(15 15 15), rgb(13 13 13 / 60%));
+    display: inline-block;
+}
+
+#hero-text>h1 {
+    margin-top: 25px;
 }
 
 #hero-text>h3 {
@@ -127,7 +124,7 @@ header {
 #projects-pool {
     width: 100%;
     height: auto;
-    margin-top: 150px;
+    margin-top: 190px;
     text-align: center;
 }
 
